--- a/package.json
+++ b/package.json
@@ -1,10 +1,23 @@
 {
   "name": "n-tools",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "a util tool for dev",
   "main": "src/index.js",
   "scripts": {
-    "test": "jest"
+    "precommit": "lint-staged",
+    "lint": "eslint .",
+    "test": "jest && codecov"
+  },
+  "jest": {
+    "coverageDirectory": "./coverage/",
+    "collectCoverage": true,
+    "browser": true
+  },
+  "lint-staged": {
+    "src/**/*.js": [
+      "eslint --fix",
+      "git add"
+    ]
   },
   "repository": {
     "type": "git",
@@ -15,5 +28,13 @@
   "bugs": {
     "url": "https://github.com/ReAlign/n-tools/issues"
   },
-  "homepage": "https://github.com/ReAlign/n-tools#readme"
+  "homepage": "https://github.com/ReAlign/n-tools#readme",
+  "devDependencies": {
+    "eslint": "^3.19.0",
+    "eslint-config-kaola": "^0.1.3",
+    "husky": "^0.13.4",
+    "lint-staged": "^3.6.1",
+    "jest": "^21.2.1",
+    "codecov": "^2.3.0"
+  }
 }
