--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "n-tools",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "a util tool for dev",
   "main": "index.js",
   "scripts": {
@@ -52,7 +52,7 @@
     "mocha": "^3.2.0",
     "mocha-lcov-reporter": "^1.3.0",
     "webpack": "^2.2.1",
-    "eslint": "^3.19.0",
+    "eslint": ">=4.18.2",
     "eslint-config-kaola": "^0.1.3",
     "husky": "^0.13.4",
     "lint-staged": "^3.6.1",
